--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -20,7 +20,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="47"/>
+      <BuildNr Value="48"/>
       <Language Value="0416"/>
       <StringTable CompanyName="Rúbio R. C. Terra (rubio.terra@gmail.com)" FileDescription="Ferramenta para associação de textos bíblicos" ProductName="iBiblia" ProductVersion="0.0.0.0"/>
     </VersionInfo>
@@ -155,10 +155,11 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formPrincipal"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="2"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="339"/>
-        <CursorPos Y="357"/>
+        <TopLine Value="172"/>
+        <CursorPos X="95" Y="186"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -167,8 +168,7 @@
         <Filename Value="versiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Versiculo"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="9"/>
         <WindowIndex Value="1"/>
         <TopLine Value="182"/>
         <CursorPos X="29" Y="195"/>
@@ -194,10 +194,10 @@
         <Filename Value="projeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="72"/>
-        <CursorPos X="13" Y="89"/>
+        <TopLine Value="738"/>
+        <CursorPos X="26" Y="750"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -210,7 +210,7 @@
         <Filename Value="sugestao.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sugestao"/>
-        <EditorIndex Value="18"/>
+        <EditorIndex Value="14"/>
         <WindowIndex Value="1"/>
         <TopLine Value="406"/>
         <CursorPos X="3" Y="413"/>
@@ -223,7 +223,7 @@
         <ComponentName Value="FormNovoProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="12"/>
         <WindowIndex Value="1"/>
         <TopLine Value="82"/>
         <CursorPos X="13" Y="84"/>
@@ -237,7 +237,7 @@
         <ComponentName Value="frmDictionaryPopup"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="15"/>
+        <EditorIndex Value="11"/>
         <WindowIndex Value="1"/>
         <TopLine Value="61"/>
         <CursorPos X="13" Y="93"/>
@@ -249,7 +249,7 @@
         <Filename Value="rtfedit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="RTFEdit"/>
-        <EditorIndex Value="21"/>
+        <EditorIndex Value="17"/>
         <WindowIndex Value="1"/>
         <TopLine Value="210"/>
         <CursorPos Y="139"/>
@@ -262,7 +262,7 @@
         <ComponentName Value="FormPropProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="20"/>
+        <EditorIndex Value="16"/>
         <WindowIndex Value="1"/>
         <TopLine Value="49"/>
         <CursorPos Y="59"/>
@@ -274,10 +274,10 @@
         <Filename Value="memoversiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="MemoVersiculo"/>
-        <EditorIndex Value="19"/>
+        <EditorIndex Value="15"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="39"/>
-        <CursorPos Y="53"/>
+        <TopLine Value="60"/>
+        <CursorPos Y="85"/>
         <UsageCount Value="224"/>
         <Loaded Value="True"/>
       </Unit10>
@@ -305,7 +305,7 @@
         <ComponentName Value="frmExportarProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="6"/>
         <WindowIndex Value="1"/>
         <TopLine Value="49"/>
         <CursorPos Y="64"/>
@@ -317,7 +317,7 @@
         <Filename Value="exportarprojeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ExportarProjeto"/>
-        <EditorIndex Value="17"/>
+        <EditorIndex Value="13"/>
         <WindowIndex Value="1"/>
         <TopLine Value="362"/>
         <CursorPos X="29" Y="284"/>
@@ -330,7 +330,7 @@
         <ComponentName Value="FrmMesclarProjetos"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="23"/>
+        <EditorIndex Value="19"/>
         <WindowIndex Value="1"/>
         <CursorPos X="21" Y="30"/>
         <UsageCount Value="213"/>
@@ -343,7 +343,7 @@
         <ComponentName Value="FrmEscolherVerseRules"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="22"/>
+        <EditorIndex Value="18"/>
         <WindowIndex Value="1"/>
         <CursorPos X="42" Y="9"/>
         <UsageCount Value="228"/>
@@ -352,7 +352,7 @@
       <Unit17>
         <Filename Value="twAutomate.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="3"/>
         <WindowIndex Value="1"/>
         <TopLine Value="71"/>
         <CursorPos X="50" Y="179"/>
@@ -363,7 +363,7 @@
         <Filename Value="twsyncthread.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="twSyncThread"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="4"/>
         <WindowIndex Value="1"/>
         <TopLine Value="17"/>
         <CursorPos Y="44"/>
@@ -383,7 +383,7 @@
         <Filename Value="onttokenizer.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ONTTokenizer"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="7"/>
         <WindowIndex Value="1"/>
         <CursorPos X="95" Y="14"/>
         <UsageCount Value="202"/>
@@ -393,7 +393,7 @@
         <Filename Value="ontparser.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ONTParser"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="8"/>
         <WindowIndex Value="1"/>
         <TopLine Value="262"/>
         <CursorPos Y="291"/>
@@ -404,7 +404,7 @@
         <Filename Value="sintagma.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sintagma"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="10"/>
         <WindowIndex Value="1"/>
         <TopLine Value="581"/>
         <CursorPos Y="600"/>
@@ -437,12 +437,11 @@
       </Unit25>
       <Unit26>
         <Filename Value="C:\tools\lazarus\lcl\include\treeview.inc"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="5297"/>
         <CursorPos Y="5316"/>
         <UsageCount Value="22"/>
-        <Loaded Value="True"/>
       </Unit26>
       <Unit27>
         <Filename Value="C:\tools\lazarus\lcl\comctrls.pp"/>
@@ -481,30 +480,27 @@
       </Unit30>
       <Unit31>
         <Filename Value="C:\tools\lazarus\lcl\include\font.inc"/>
-        <EditorIndex Value="14"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="1326"/>
         <CursorPos Y="1351"/>
         <UsageCount Value="19"/>
-        <Loaded Value="True"/>
       </Unit31>
       <Unit32>
         <Filename Value="C:\tools\lazarus\lcl\include\customlabel.inc"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="59"/>
         <CursorPos Y="78"/>
         <UsageCount Value="19"/>
-        <Loaded Value="True"/>
       </Unit32>
       <Unit33>
         <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\packages\fcl-image\src\fphelper.inc"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="49"/>
         <CursorPos Y="68"/>
         <UsageCount Value="19"/>
-        <Loaded Value="True"/>
       </Unit33>
       <Unit34>
         <Filename Value="C:\tools\lazarus\lcl\include\graphiccontrol.inc"/>
@@ -541,124 +537,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="188" Column="3" TopLine="184"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="277" Column="42" TopLine="256"/>
       </Position1>
       <Position2>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="194" Column="20" TopLine="184"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="280" Column="31" TopLine="259"/>
       </Position2>
       <Position3>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="201" Column="22" TopLine="184"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="282" Column="74" TopLine="261"/>
       </Position3>
       <Position4>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="351" Column="73" TopLine="319"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="292" Column="32" TopLine="272"/>
       </Position4>
       <Position5>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="194" Column="20" TopLine="175"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="325" Column="42" TopLine="304"/>
       </Position5>
       <Position6>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="201" Column="22" TopLine="175"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="326" Column="59" TopLine="305"/>
       </Position6>
       <Position7>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1371" Column="26" TopLine="1366"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="332" Column="42" TopLine="311"/>
       </Position7>
       <Position8>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1400" Column="3" TopLine="1366"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="333" Column="53" TopLine="312"/>
       </Position8>
       <Position9>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="568" TopLine="549"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="445" Column="56" TopLine="425"/>
       </Position9>
       <Position10>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="211" TopLine="192"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="453" Column="33" TopLine="433"/>
       </Position10>
       <Position11>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="569" Column="56" TopLine="549"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="89" Column="13" TopLine="72"/>
       </Position11>
       <Position12>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="213" Column="28" TopLine="192"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="19" Column="38" TopLine="6"/>
       </Position12>
       <Position13>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1399" TopLine="1366"/>
+        <Caret Line="740" Column="14" TopLine="732"/>
       </Position13>
       <Position14>
         <Filename Value="projeto.pas"/>
-        <Caret Line="127" Column="60" TopLine="110"/>
+        <Caret Line="748" Column="29" TopLine="732"/>
       </Position14>
       <Position15>
         <Filename Value="projeto.pas"/>
-        <Caret Line="878" Column="3" TopLine="889"/>
+        <Caret Line="916" Column="12" TopLine="895"/>
       </Position15>
       <Position16>
         <Filename Value="projeto.pas"/>
-        <Caret Line="130" Column="60" TopLine="111"/>
+        <Caret Line="991" Column="12" TopLine="970"/>
       </Position16>
       <Position17>
         <Filename Value="projeto.pas"/>
-        <Caret Line="971" TopLine="969"/>
+        <Caret Line="1038" Column="12" TopLine="1017"/>
       </Position17>
       <Position18>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1234" Column="39" TopLine="1229"/>
+        <Caret Line="1113" Column="18" TopLine="1093"/>
       </Position18>
       <Position19>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1335" Column="11" TopLine="1303"/>
+        <Caret Line="1142" Column="20" TopLine="1122"/>
       </Position19>
       <Position20>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1487" Column="11" TopLine="1455"/>
+        <Caret Line="1482" Column="22" TopLine="1471"/>
       </Position20>
       <Position21>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1527" Column="11" TopLine="1496"/>
+        <Caret Line="1741" Column="87" TopLine="1721"/>
       </Position21>
       <Position22>
         <Filename Value="projeto.pas"/>
-        <Caret Line="89" Column="13" TopLine="72"/>
+        <Caret Line="1775" Column="100" TopLine="1755"/>
       </Position22>
       <Position23>
         <Filename Value="projeto.pas"/>
-        <Caret Line="878" Column="41" TopLine="858"/>
+        <Caret Line="1917" Column="34" TopLine="1897"/>
       </Position23>
       <Position24>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1234" Column="39" TopLine="1214"/>
+        <Caret Line="1953" Column="79" TopLine="1933"/>
       </Position24>
       <Position25>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1335" Column="11" TopLine="1313"/>
+        <Caret Line="2030" Column="79" TopLine="2010"/>
       </Position25>
       <Position26>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1487" Column="11" TopLine="1455"/>
+        <Caret Line="2065" Column="83" TopLine="2044"/>
       </Position26>
       <Position27>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1527" Column="11" TopLine="1496"/>
+        <Caret Line="2074" Column="80" TopLine="2054"/>
       </Position27>
       <Position28>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="89" Column="13" TopLine="72"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="15" Column="65" TopLine="2"/>
       </Position28>
       <Position29>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="568" TopLine="549"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="520" TopLine="518"/>
       </Position29>
       <Position30>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="600" TopLine="581"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="522" Column="63" TopLine="509"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
