--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -139,7 +139,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="38">
+    <Units Count="40">
       <Unit0>
         <Filename Value="iBiblia.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -155,7 +155,6 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formPrincipal"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="2"/>
         <WindowIndex Value="1"/>
         <TopLine Value="172"/>
@@ -196,8 +195,8 @@
         <UnitName Value="Projeto"/>
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="738"/>
-        <CursorPos X="26" Y="750"/>
+        <TopLine Value="825"/>
+        <CursorPos X="30" Y="844"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -237,10 +236,11 @@
         <ComponentName Value="frmDictionaryPopup"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="11"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="61"/>
-        <CursorPos X="13" Y="93"/>
+        <TopLine Value="114"/>
+        <CursorPos Y="133"/>
         <UsageCount Value="201"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -251,8 +251,8 @@
         <UnitName Value="RTFEdit"/>
         <EditorIndex Value="17"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="210"/>
-        <CursorPos Y="139"/>
+        <TopLine Value="199"/>
+        <CursorPos X="13" Y="216"/>
         <UsageCount Value="201"/>
         <Loaded Value="True"/>
       </Unit8>
@@ -534,128 +534,140 @@
         <CursorPos Y="57"/>
         <UsageCount Value="10"/>
       </Unit37>
+      <Unit38>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\packages\winunits-base\src\richedit.pp"/>
+        <EditorIndex Value="-1"/>
+        <WindowIndex Value="1"/>
+        <TopLine Value="131"/>
+        <CursorPos X="5" Y="150"/>
+        <UsageCount Value="11"/>
+      </Unit38>
+      <Unit39>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\win\wininc\func.inc"/>
+        <EditorIndex Value="-1"/>
+        <WindowIndex Value="1"/>
+        <TopLine Value="470"/>
+        <CursorPos X="10" Y="489"/>
+        <UsageCount Value="10"/>
+      </Unit39>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="277" Column="42" TopLine="256"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="96" TopLine="77"/>
       </Position1>
       <Position2>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="280" Column="31" TopLine="259"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="97" TopLine="77"/>
       </Position2>
       <Position3>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="282" Column="74" TopLine="261"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="100" TopLine="77"/>
       </Position3>
       <Position4>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="292" Column="32" TopLine="272"/>
+        <Filename Value="formpopup.pas"/>
+        <Caret Line="92" TopLine="73"/>
       </Position4>
       <Position5>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="325" Column="42" TopLine="304"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="96" TopLine="77"/>
       </Position5>
       <Position6>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="326" Column="59" TopLine="305"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="97" TopLine="77"/>
       </Position6>
       <Position7>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="332" Column="42" TopLine="311"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="100" TopLine="77"/>
       </Position7>
       <Position8>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="333" Column="53" TopLine="312"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="200" TopLine="181"/>
       </Position8>
       <Position9>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="445" Column="56" TopLine="425"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="202" TopLine="181"/>
       </Position9>
       <Position10>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="453" Column="33" TopLine="433"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="182" TopLine="176"/>
       </Position10>
       <Position11>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="89" Column="13" TopLine="72"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="129" TopLine="110"/>
       </Position11>
       <Position12>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="19" Column="38" TopLine="6"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="200" TopLine="180"/>
       </Position12>
       <Position13>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="740" Column="14" TopLine="732"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="130" TopLine="112"/>
       </Position13>
       <Position14>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="748" Column="29" TopLine="732"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="200" TopLine="180"/>
       </Position14>
       <Position15>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="916" Column="12" TopLine="895"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="202" TopLine="180"/>
       </Position15>
       <Position16>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="991" Column="12" TopLine="970"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="200" TopLine="180"/>
       </Position16>
       <Position17>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1038" Column="12" TopLine="1017"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="129" TopLine="111"/>
       </Position17>
       <Position18>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1113" Column="18" TopLine="1093"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="137" TopLine="110"/>
       </Position18>
       <Position19>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1142" Column="20" TopLine="1122"/>
+        <Filename Value="formpopup.pas"/>
+        <Caret Line="173" TopLine="142"/>
       </Position19>
       <Position20>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1482" Column="22" TopLine="1471"/>
+        <Caret Line="853" TopLine="833"/>
       </Position20>
       <Position21>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1741" Column="87" TopLine="1721"/>
+        <Filename Value="formpopup.pas"/>
+        <Caret Line="133" TopLine="114"/>
       </Position21>
       <Position22>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1775" Column="100" TopLine="1755"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="200" TopLine="181"/>
       </Position22>
       <Position23>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1917" Column="34" TopLine="1897"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="202" TopLine="181"/>
       </Position23>
       <Position24>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1953" Column="79" TopLine="1933"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="200" TopLine="181"/>
       </Position24>
       <Position25>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="2030" Column="79" TopLine="2010"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="96" TopLine="77"/>
       </Position25>
       <Position26>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="2065" Column="83" TopLine="2044"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="97" TopLine="77"/>
       </Position26>
       <Position27>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="2074" Column="80" TopLine="2054"/>
+        <Filename Value="rtfedit.pas"/>
+        <Caret Line="100" TopLine="77"/>
       </Position27>
       <Position28>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="15" Column="65" TopLine="2"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="853" TopLine="825"/>
       </Position28>
       <Position29>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="520" TopLine="518"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="841" Column="28" TopLine="825"/>
       </Position29>
-      <Position30>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="522" Column="63" TopLine="509"/>
-      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
